big step forward on testing, and a bunch of fixes.
Signed-off-by: Jasper Potts <1466205+jasperpotts@users.noreply.github.com>